--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,9 @@ strict_equality = true
 [tool.ruff]
 target-version = "py310"
 line-length = 100
+exclude = [
+    "prototypes/**",
+]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
