--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ strict_equality = true
 [tool.ruff]
 target-version = "py310"
 line-length = 100
+exclude = ["prototypes"]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -103,6 +104,7 @@ addopts = """
 line-length = 100
 target-version = ['py310', 'py311', 'py312']
 include = '\.pyi?$'
+extend-exclude = 'prototypes'
 
 [tool.coverage.run]
 source = ["src/cocode"]
