--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,8 @@ strict_equality = true
 target-version = "py310"
 line-length = 100
 exclude = ["prototypes"]
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -87,7 +89,7 @@ ignore = [
     "B008",  # do not perform function calls in argument defaults
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]  # asserts allowed in tests
 
 [tool.pytest.ini_options]
