--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,10 @@ jobs:
         run: |
           uv pip install --system -e .[dev]
 
-
-      - name: Format check (black)
-        run: black --check .
-
-      - name: Type check (mypy)
-        run: mypy .
+      - name: Run pre-commit (all files)
+        uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --all-files
 
       - name: Run tests with coverage
         run: pytest
